Archive2/bc/5a71de6870bd07/output
main.cpp:15:20: error: constexpr variable 'i' must be initialized by a constant expression
    constexpr auto i = bar|=FooEnum::Foo1;
                   ^   ~~~~~~~~~~~~~~~~~~
main.cpp:10:16: note: a constant expression cannot modify an object that is visible outside that expression
    return lhs |= 1u << static_cast<uint8_t>(rhs);
               ^
main.cpp:15:24: note: in call to 'operator|=(bar, 0)'
    constexpr auto i = bar|=FooEnum::Foo1;
                       ^
1 error generated.
